--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer-gridfs-storage": "^4.0.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongo-gridfs": "^1.1.0",
     "mongodb": "3.7.3",
     "mongoose": "^7.1.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
