--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/multer-gridfs-storage": "^4.0.5",
     "bcryptjs": "^2.4.3",
+    "bson": "^6.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongo-gridfs": "^1.1.0",
@@ -49,6 +50,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bson": "^4.2.4",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
